# job-search-agent

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: BEST_PRACTICES.md  decisions_changes.md  redesign-plan.md
examples/: example_output.txt
outputs/junior_civil_engineer_20260714_212421/: career_advisory_20260714_212730.txt  interview_prep_20260714_212646.txt  job_search_20260714_212516.txt  job_search_report_20260714_212730.md  skills_analysis_20260714_212601.txt
outputs/junior_civil_engineer_20260714_213800/: career_advisory_20260714_214048.md  interview_prep_20260714_214004.md  job_search_20260714_213834.md  job_search_report_20260714_214048.md  skills_analysis_20260714_213918.md
outputs/junior_civil_engineer_20260714_214230/: career_advisory_20260714_214513.md  interview_prep_20260714_214430.md  job_search_20260714_214305.md  job_search_report_20260714_214513.md  skills_analysis_20260714_214347.md
outputs/junior_civil_engineer_20260714_214539/: career_advisory_20260714_214825.md  interview_prep_20260714_214740.md  job_search_20260714_214614.md  job_search_report_20260714_214825.md  skills_analysis_20260714_214656.md
outputs/junior_civil_engineer_20260714_214846/: job_search_20260714_214926.md
src/: __init__.py  agents.py  cli.py  config.py  llm.py  tasks.py  tools.py
src/core/: legacy_run.py  profile_service.py
src/db/: connection.py  migrate.py  repos.py
src/prompts/: __init__.py  extraction.py  merge.py  (+5 more)
tests/: test_cli.py  test_db.py  test_legacy_run.py  test_llm.py  test_profile_service.py  test_tools.py
(+1 files in other folders)
